styles.css
html
{
  font-family: Helvetica, Arial, sans-serif;
}

#canvas
{
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

.tool_container
{
  overflow-x: auto;
}

.layer_title
{
  font-weight: bold;
}

.sidebar
{
  overflow: auto;
  word-wrap: break-word;
  position: relative;
}

.sidebar > *
{
  margin: 15px 0 0 0;
}

.sidebar > *:first-child
{
  margin: 0;
}

.sidebar h1
{
  font-size: 1.8em;
}

.sidebar_container
{
  line-height: 0;
  vertical-align: top;
}

.sidebar_container *
{
  line-height: initial;
}

#node_sidebar_options_container
{
  display: flex;
  margin-bottom: 10px;
}

#node_sidebar_options_container svg
{
  flex-shrink: 0;
}

#node_sidebar_options_container div
{
  margin: 0 0 0 10px;
}

#node_sidebar_options_container h2
{
  margin: 0 0 5px 0;
  font-size: 1.3em;
}

#node_sidebar_options_container p
{
  margin: 0;
}

.sidebar_list_container h2
{
  margin: 0 0 5px 0;
  font-size: 1.3em;
}

.sidebar_list_item_container
{
  display: flex;
  padding: 5px 0 5px 0;
}

.sidebar_list_item_container:last-child
{
  padding-bottom: 0;
}

.sidebar_list_item_container svg
{
  flex-shrink: 0;
}

.sidebar_list_item_container p
{
  flex-basis: 100%;
  margin: 0 0 0 5px;
  align-self: center;
}

#link_sidebar_header_container
{
  display: flex;
}

#link_sidebar_header_container h1
{
  margin: 0 0 0 10px;
  align-self: center;
}

.close_button
{
  color: #777;
  font: 48px Helvetica, Arial, sans-serif;
  position: absolute;
  top: 0;
  right: 16px;
  cursor: pointer;
  margin: 0;
  -webkit-transition: color .5s; /* Safari */
          transition: color .5s;
}

.close_button:hover
{
  color: #333;
}

.close_button:after
{
  content: "\00D7";
}

.node, .link, .background_link
{
  cursor: pointer;
}

